tmp/envoy/secrets/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8000

static_resources:
  secrets:
  - name: server_cert
    tls_certificate:
      certificate_chain:
        filename: /etc/envoy/certs/server.crt.pem
      private_key:
        filename: /etc/envoy/certs/server.key.pem

  - name: client_cert
    tls_certificate:
      certificate_chain:
        filename: /etc/envoy/certs/client.crt.pem
      private_key:
        filename: /etc/envoy/certs/client.key.pem

  - name: validation_context
    validation_context:
      trusted_ca:
        filename: /etc/envoy/certs/rootca.crt.pem

  listeners:
  - name: listener_test
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: listener_test
          use_remote_address: true
          route_config:
            name: route_test
            virtual_hosts:
            - name: route_test
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                route:
                  cluster: cluster_test
                  timeout: 1s
          http_filters:
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
            - name: server_cert
#           validation_context_sds_secret_config:
#             name: validation_context

  clusters:
  - name: cluster_test
    connect_timeout: 1s
    http2_protocol_options: {}
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cluster_echo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: libra-echo
                port_value: 80
#     transport_socket:
#       name: envoy.transport_sockets.tls
#       typed_config:
#         "@type":  type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
#         common_tls_context:
#           tls_certificate_sds_secret_configs:
#           - name: client_cert
